# FabricHelpers

./: .commit_msg.tmp  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  fabric_scanner_v2.ipynb
coreHelper/: .gitignore  README.md  pyproject.toml
coreHelper/src/fabric_core/: __init__.py  auth.py  build_notebook.py  diagnostics.py  enumerate.py  http.py  paths.py
coreHelper/tests/unit/: test_auth.py  test_build_notebook.py  test_diagnostics.py  test_enumerate.py  test_http.py  test_paths.py
downloaderHelper/: README.md  pyproject.toml
downloaderHelper/notebooks/: fabric_downloader_v1.ipynb
downloaderHelper/scripts/: build_notebook.py
downloaderHelper/src/fabric_downloader/: __init__.py  cli.py  config.py  diagnostics.py  item_types.py  paths.py  persist.py
downloaderHelper/src/fabric_downloader/api/: __init__.py  auth.py  enumerate.py  fetch.py
downloaderHelper/src/fabric_downloader/handlers/: __init__.py  dataflow.py  environment.py  eventstream.py  kql_database.py  lakehouse.py  notebook.py  pipeline.py  report.py  semantic_model.py  spark_job_definition.py
downloaderHelper/src/fabric_downloader/spark/: __init__.py  context.py  inventory.py  partition.py  runner.py  schema.py
downloaderHelper/tests/: conftest.py
downloaderHelper/tests/unit/: test_api_enumerate.py  test_cli.py  test_config.py  test_handler_lakehouse.py  test_handlers.py  test_item_types.py  test_no_cross_imports.py  test_partition.py  test_paths.py  test_persist.py
mpeHelper/: README.md  README_mpe.md  mpe_manager.ipynb  pyproject.toml
mpeHelper/notebooks/: mpe_manager.ipynb
mpeHelper/scripts/: build_notebook.py
mpeHelper/src/fabric_mpe/: __init__.py  api.py  approve.py  arm.py  auth.py  config.py  delete.py  diagnostics.py  inventory.py  persist.py  recreate.py
mpeHelper/terraform/: .gitignore  README.md  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
mpeHelper/terraform/modules/managed_private_endpoint/: main.tf  outputs.tf  variables.tf  versions.tf
mpeHelper/terraform/scripts/: approve_pending.py  import_existing.py
mpeHelper/terraform/scripts/tests/: test_approve_pending.py  test_import_existing.py
mpeHelper/tests/unit/: test_api.py  test_approve.py  test_arm.py  test_auth.py  test_config.py  test_delete.py  test_inventory.py  test_no_cross_imports.py  test_persist.py  test_recreate.py
reportingHelper/: .gitignore  README.md  SCHEMA.md  pyproject.toml
reportingHelper/src/fabric_reporting/: __init__.py  adapter.py  models.py
reportingHelper/tests/: conftest.py
reportingHelper/tests/unit/: test_adapter.py  test_models.py  test_no_cross_imports.py
scannerHelper/: .gitignore  README.md  fabric_scanner_v2.ipynb  fabric_url_scanner.ipynb  pyproject.toml
scannerHelper/.venv-smoke/: pyvenv.cfg
scannerHelper/notebooks/: datasource_deep_scanner.ipynb  fabric_scanner_ai_v1.ipynb  fabric_scanner_v2.ipynb
scannerHelper/scripts/: build_notebook.py
scannerHelper/spark-warehouse/v2_findings_test_reporting_e2e_flag_off_sk0/: .part-00000-6a963a96-f358-4547-adf9-571247797a28-c000.snappy.parquet.crc  part-00000-6a963a96-f358-4547-adf9-571247797a28-c000.snappy.parquet
scannerHelper/spark-warehouse/v2_findings_test_reporting_e2e_idempotent_0/: .part-00000-53db1196-17c9-4bec-9db6-7fb76e64c109-c000.snappy.parquet.crc  part-00000-53db1196-17c9-4bec-9db6-7fb76e64c109-c000.snappy.parquet
scannerHelper/spark-warehouse/v2_findings_test_reporting_e2e_no_findings0/: .part-00000-27c57145-095b-414e-87ad-08b31a63a6ec-c000.snappy.parquet.crc  part-00000-27c57145-095b-414e-87ad-08b31a63a6ec-c000.snappy.parquet
scannerHelper/spark-warehouse/v2_findings_test_reporting_e2e_writes_find0/: .part-00000-4e37d4f9-c513-491e-9e09-71b893d4616c-c000.snappy.parquet.crc  part-00000-4e37d4f9-c513-491e-9e09-71b893d4616c-c000.snappy.parquet
scannerHelper/spark-warehouse/v2_inventory_test_reporting_e2e_flag_off_sk0/: .part-00000-1e624eb3-586b-4717-9e10-ba2c89a3b0d0-c000.snappy.parquet.crc  part-00000-1e624eb3-586b-4717-9e10-ba2c89a3b0d0-c000.snappy.parquet
scannerHelper/spark-warehouse/v2_inventory_test_reporting_e2e_idempotent_0/: .part-00000-a4c9b039-50c4-4e41-a53c-e4ab0fe877fa-c000.snappy.parquet.crc  part-00000-a4c9b039-50c4-4e41-a53c-e4ab0fe877fa-c000.snappy.parquet
scannerHelper/spark-warehouse/v2_inventory_test_reporting_e2e_no_findings0/: .part-00000-cf99ce9d-0bbd-4218-bf92-74a0b090eab6-c000.snappy.parquet.crc  part-00000-cf99ce9d-0bbd-4218-bf92-74a0b090eab6-c000.snappy.parquet
scannerHelper/spark-warehouse/v2_inventory_test_reporting_e2e_writes_find0/: .part-00000-7bd969ee-decf-4e3b-a466-172e3e592e42-c000.snappy.parquet.crc  part-00000-7bd969ee-decf-4e3b-a466-172e3e592e42-c000.snappy.parquet
scannerHelper/src/fabric_scanner/: __init__.py  config.py  diagnostics.py  paths.py  reporting.py
scannerHelper/tests/: build_fake_samples.py  conftest.py  fake_samples.ipynb  fake_samples.txt
scannerHelper/tests/fixtures/: build_fixtures.py  sample_attached_lh.ipynb  sample_clean.ipynb  sample_cross_workspace.ipynb
scannerHelper/tests/integration/: test_reporting_e2e.py
scannerHelper/tests/unit/: test_ai_aggregate.py  test_ai_partition.py  test_ai_prompt.py  test_ai_runner.py  test_ai_schema.py  test_api_auth.py  test_api_enumerate.py  test_api_fetch.py  test_api_keys.py  test_chunker.py  test_config.py  test_diagnostics.py  test_enrich.py  test_extract.py  test_inventory.py  test_no_cross_imports.py  test_partition.py  test_paths.py  test_patterns.py  test_persist.py  test_reporting.py  test_resolve.py  test_scanner.py  test_schema.py
splitterHelper/: README.md  pyproject.toml
splitterHelper/src/fabric_splitter/: __init__.py  _http.py  classify.py  cli.py  move.py  plan.py  rewrite.py  workspaces.py
splitterHelper/tests/unit/: test_classify.py  test_cross_group_refs.py  test_e2e.py  test_no_cross_imports.py  test_plan.py  test_rewrite.py
tenantHelper/: README.md  pyproject.toml
tenantHelper/docs/: api-reference.md
tenantHelper/src/fabric_tenant/: __init__.py  cli.py
tenantHelper/tests/unit/: test_no_cross_imports.py  test_version.py
(+54 files in other folders)
