[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name            = "fabric-mpe"
dynamic         = ["version"]
description     = "Inventory, delete, recreate, and approve Microsoft Fabric Managed Private Endpoints across one or many workspaces."
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }
authors         = [{ name = "Tim Arif" }]
keywords        = ["fabric", "microsoft", "managed-private-endpoint", "mpe", "private-link", "azure"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    # mounted_files_path, fabric_core.http retrying client, and the SPN
    # auth source were all added in fabric-core 0.4.
    "fabric-core>=0.4,<1.0",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.5",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "build>=1.0",
    "hatch>=1.9",
    "nbformat>=5.9",
]

[project.urls]
Homepage   = "https://github.com/timarif/FabricHelpers"
Repository = "https://github.com/timarif/FabricHelpers"
Issues     = "https://github.com/timarif/FabricHelpers/issues"

[tool.hatch.version]
path = "src/fabric_mpe/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fabric_mpe"]

[tool.hatch.build.targets.sdist]
include = [
    "src/fabric_mpe",
    "tests",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths       = ["tests"]
addopts         = "-ra -q --strict-markers"
filterwarnings  = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length    = 100
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # let formatter handle long lines
