[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name            = "fabric-splitter"
dynamic         = ["version"]
description     = "Split a Fabric workspace into two by item type — dry-run mapping, move, and reference rewrite."
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }
authors         = [{ name = "Tim Arif" }]
keywords        = ["fabric", "workspace", "splitter", "migrate", "governance"]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "fabric-core>=0.1,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "build>=1.0",
    "hatch>=1.9",
]

[project.scripts]
fabric-splitter = "fabric_splitter.cli:main"

[project.urls]
Homepage   = "https://github.com/timarif/FabricHelpers"
Repository = "https://github.com/timarif/FabricHelpers"
Issues     = "https://github.com/timarif/FabricHelpers/issues"

[tool.hatch.version]
path = "src/fabric_splitter/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fabric_splitter"]

[tool.hatch.build.targets.sdist]
include = [
    "src/fabric_splitter",
    "tests",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths       = ["tests"]
addopts         = "-ra -q --strict-markers"
markers         = [
    "integration: requires live Fabric API access (slow)",
]
filterwarnings  = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # let formatter handle long lines
